adds GeneratorTest